Criação da função de xeque-mate