@@ -19,7 +19,6 @@ public class ChessMatch {
     private boolean checkMate;
     private ChessPiece enPassant;
     private ChessPiece promoted;
-
     private List<Piece> piecesOnTheBoard = new ArrayList<>();
     private List<Piece> capturedPieces = new ArrayList<>();
 
@@ -43,6 +42,10 @@ public class ChessMatch {
         return check;
     }
 
+    public boolean getCheckMate() {
+        return checkMate;
+    }
+
     public ChessPiece[][] getPieces() {
         ChessPiece[][] pieces = new ChessPiece[board.getRows()][board.getCols()];
         for (int i = 0; i < board.getRows(); i++) {
@@ -51,6 +54,12 @@ public class ChessMatch {
             }
         }
         return pieces;
+    }
+
+    public boolean[][] possibleMoves(ChessPosition sourcePosition) {
+        Position position = sourcePosition.toPosition();
+        validateSourcePosition(position);
+        return board.piece(position).possibleMoves();
     }
 
     public ChessPiece performChessMove(ChessPosition sourcePosition, ChessPosition targetPosition) {
@@ -65,9 +74,14 @@ public class ChessMatch {
             throw new ChessException("Você não pode se colocar em check!");
         }
 
-        check = testCheck(opponent(currentPlayer)) ? true : false;
+        check = (testCheck(opponent(currentPlayer))) ? true : false;
 
-        nextTurn();
+        if (testCheckMate(opponent(currentPlayer))) {
+            checkMate = true;
+        } else {
+            nextTurn();
+        }
+
         return (ChessPiece) capturedPiece;
     }
 
@@ -119,13 +133,13 @@ public class ChessMatch {
     }
 
     private ChessPiece king(Color color) {
-        List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == color).toList();
+        List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == color).collect(Collectors.toList());
         for (Piece piece : list) {
             if (piece instanceof King) {
                 return (ChessPiece) piece;
             }
         }
-        throw new IllegalArgumentException("Não existe nenhum rei " + color + "no tabuleiro!");
+        throw new IllegalArgumentException("Não existe nenhum rei " + color + " no tabuleiro!");
     }
 
     private boolean testCheck(Color color) {
@@ -140,31 +154,46 @@ public class ChessMatch {
         return false;
     }
 
+    private boolean testCheckMate(Color color) {
+        if(!testCheck(color)) {
+            return false;
+        }
+
+        List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == color).collect(Collectors.toList());
+        for (Piece piece : list) {
+            boolean[][] mat = piece.possibleMoves();
+            for (int i = 0; i < board.getRows(); i++) {
+                for (int j = 0; j < board.getCols(); j++) {
+                    if (mat[i][j]) {
+                        Position source = ((ChessPiece)piece).getChessPosition().toPosition();
+                        Position target = new Position(i, j);
+                        Piece capturedPiece = makeMove(source, target);
+
+                        boolean testCheck = testCheck(color);
+                        undoMove(source, target, capturedPiece);
+
+                        if (!testCheck) {
+                            return false;
+                        }
+                    }
+                }
+            }
+        }
+        return true;
+    }
+
     private void placeNewPieces(char column, int row, ChessPiece piece) {
         board.placePiece(piece, new ChessPosition(column, row).toPosition());
         piecesOnTheBoard.add(piece);
     }
 
     private void initialSetup() {
-        placeNewPieces('c', 1, new Rook(board, Color.WHITE));
-        placeNewPieces('c', 2, new Rook(board, Color.WHITE));
-        placeNewPieces('d', 2, new Rook(board, Color.WHITE));
-        placeNewPieces('e', 2, new Rook(board, Color.WHITE));
-        placeNewPieces('e', 1, new Rook(board, Color.WHITE));
-        placeNewPieces('d', 1, new King(board, Color.WHITE));
+        placeNewPieces('h', 7, new Rook(board, Color.WHITE));
+        placeNewPieces('d', 1, new Rook(board, Color.WHITE));
+        placeNewPieces('e', 1, new King(board, Color.WHITE));
 
-        placeNewPieces('c', 7, new Rook(board, Color.BLACK));
-        placeNewPieces('c', 8, new Rook(board, Color.BLACK));
-        placeNewPieces('d', 7, new Rook(board, Color.BLACK));
-        placeNewPieces('e', 7, new Rook(board, Color.BLACK));
-        placeNewPieces('e', 8, new Rook(board, Color.BLACK));
-        placeNewPieces('d', 8, new King(board, Color.BLACK));
-    }
-
-    public boolean[][] possibleMoves(ChessPosition sourcePosition) {
-        Position position = sourcePosition.toPosition();
-        validateSourcePosition(position);
-        return board.piece(position).possibleMoves();
+        placeNewPieces('b', 8, new Rook(board, Color.BLACK));
+        placeNewPieces('a', 8, new King(board, Color.BLACK));
     }
 
     private void nextTurn() {
